--- a/app/views/peeps/homepage.html.erb
+++ b/app/views/peeps/homepage.html.erb
@@ -1,1 +1,15 @@
-<h1>Welcome to Chitter</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Chitter</title>
+  </head>
+  <body>
+    <br>
+    <div class="container">
+      <div class="row justify-content-center">
+        <h1 class="text-center">Welcome to Chitter</h1>
+      </div>
+    </div>
+    <br>
+  </body>
+</html>
