--- a/app/views/peeps/index.html.erb
+++ b/app/views/peeps/index.html.erb
@@ -1,9 +1,43 @@
-<h1>Latest Peeps</h1>
-
-<ul>
-  <% @peeps.each do |peep| %>
-    <li>
-      <%= peep.message %>
-    </li>
-  <% end %>
-</ul>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Chitter</title>
+  </head>
+  <body>
+    <br>
+    <div class="container">
+      <div class="row justify-content-center">
+        <h1 class="text-center">Latest peeps</h1>
+      </div>
+    </div>
+    <br>
+    <% if @peeps.empty? %>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="card" style="width: 40rem;">
+            <div class="card-body text-center">
+              <br>
+              <h5 class="card-title">No peeps added yet</h5>
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% else %>
+      <% @peeps.each do |peep|%>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="card" style="width: 40rem;">
+              <div class="card-body text-center">
+                <br>
+                <h5 class="card-title"><%= peep.message %></h5>
+                <br>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% end %>
+      <br>
+    <% end %>
+  </body>
+</html>
