--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/peeps">Peeps</a>
             </li>
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/peeps/new">Add new peep</a>
+            </li>
           </ul>
         </div>
       </div>
