--- a/app/views/peeps/homepage.html.erb
+++ b/app/views/peeps/homepage.html.erb
@@ -11,5 +11,13 @@
       </div>
     </div>
     <br>
+    <div class="container">
+      <div class="row justify-content-center">
+        <form class="text-center" action="/sign-up" method="get">
+          <input class="btn btn-dark" type="submit" value="Sign up">
+        </form>
+      </div>
+    </div>
+    <br>
   </body>
 </html>
