Users can log in

--- a/app/views/peeps/homepage.html.erb
+++ b/app/views/peeps/homepage.html.erb
@@ -17,6 +17,12 @@
           <input class="btn btn-dark" type="submit" value="Sign up">
         </form>
       </div>
+      <br>
+      <div class="row justify-content-center">
+        <form class="text-center" action="/log-in" method="get">
+          <input class="btn btn-dark" type="submit" value="Log in">
+        </form>
+      </div>
     </div>
     <br>
   </body>
