--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,18 @@
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/peeps">Peeps</a>
             </li>
+            <% if logged_in? %>
             <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/peeps/new">Add new peep</a>
             </li>
+            <% else %>
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/sign-up">Sign up</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/log-in">Log in</a>
+            </li>
+            <% end %>
           </ul>
         </div>
       </div>
