--- a/app/views/peeps/homepage.html.erb
+++ b/app/views/peeps/homepage.html.erb
@@ -11,6 +11,7 @@
       </div>
     </div>
     <br>
+    <% if !logged_in? %>
     <div class="container">
       <div class="row justify-content-center">
         <form class="text-center" action="/sign-up" method="get">
@@ -24,6 +25,7 @@
         </form>
       </div>
     </div>
+    <% end %>
     <br>
   </body>
 </html>
