--- a/app/views/peeps/index.html.erb
+++ b/app/views/peeps/index.html.erb
@@ -33,6 +33,7 @@
                 <h5 class="card-title"><%= peep.message %></h5>
                 <br>
                 <h6 class="card-subtitle mb-2 text-muted">Created at <%= Time.parse("#{peep.created_at}").strftime("%H:%M %d/%m/%Y") %></h6>
+                <h6 class="card-subtitle mb-2 text-muted"><%= peep.user.email %></h6>
                 <br>
               </div>
             </div>
