--- a/app/views/peeps/index.html.erb
+++ b/app/views/peeps/index.html.erb
@@ -35,6 +35,10 @@
                 <h6 class="card-subtitle mb-2 text-muted">Created at <%= Time.parse("#{peep.created_at}").strftime("%H:%M %d/%m/%Y") %></h6>
                 <h6 class="card-subtitle mb-2 text-muted"><%= peep.user.email %></h6>
                 <br>
+                <% if logged_in? && current_user.id == peep.user_id %>
+                <%= button_to "Delete Peep", peep_path(peep), method: 'delete', data: { turbo_confirm: "Are you sure?" }, class: "btn btn-dark" %>
+                <br>
+                <% end %>
               </div>
             </div>
           </div>
