--- a/app/views/peeps/index.html.erb
+++ b/app/views/peeps/index.html.erb
@@ -43,6 +43,10 @@
                 <% end %>
                 <%= button_to "View comments", peep_comments_path(peep), method: 'get', class: "btn btn-dark" %>
                 <br>
+                <% if logged_in? %>
+                <%= button_to "Add comment", new_peep_comment_path(peep), method: 'get', class: "btn btn-dark" %>
+                <br>
+                <% end %>
               </div>
             </div>
           </div>
